# DjangoProjectShell

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
