[tool.poetry]
# Choose Your Project name
name = "DjangoProjectShell"
version = "0.1.0"
description = ""
authors = ["Almaz Durusaliev"]
readme = "README.md"
# Write same project name
packages = [{include = "DjangoProjectShell"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
drf-yasg = "^1.21.5"
python-decouple = "^3.8"
django-filter = "^23.2"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = "^0.0.267"
isort = "^5.12.0"
black = "^23.3.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
